app/scripts/components/Search/search-style.scss
// Import global variables
@import '../../../styles/variables';

$checkbox-color: #aea6a6;

.c-search {
  display: flex;
  align-items: center;
  justify-content: space-around;

  .filters-dropdown {
    z-index: 1;
  }

  .search-bar {
    height: 60px;
    width: 100%;

    .search-input {
      height: 100%;
      width: 100%;
      padding: 0 $small-margin;
      border-radius: 2px 2px 0 0;
      border: 0;
      outline: none;
    }

    .search-results-list {
      width: 100%;
      max-height: 221px;
      margin: 0;
      padding: 0;
      border-radius: 0 0 2px 2px;
      box-shadow: $box-shadow-1;

      background-color: $medium-grey;

      list-style: none;
      overflow: overlay;
      cursor: pointer;

      .search-results-item {
        padding:  $small-margin / 2 $medium-margin;
        outline: none;

        &.-error {
          color: rgba(red, 0.5);
          font-weight: $font-weight-bold;
        }

        &.-item {
          &:hover, &:focus {
            background-color: $gold-yellow;
            color: $theme-base;
          }

        }
      }
    }

    @media (max-width: 639px) {
      margin-top: $small-margin;
    }

  }

  .c-checkbox-group {
    padding: $small-margin;

    .c-checkbox {

      > label {
        color: $link-font-color;
        font-size: $font-size-xsmall;

        > span {
          width: 16px;
          height: 16px;
          border: 2px solid $checkbox-color;
          border-radius: 2px;

          .c-icon {
            > svg {
              fill: transparent;
            }
          }

          &:after {
            content: none;
          }
        }
      }

      input[type=checkbox]:checked + label {
        font-weight: 700;

        span {
          background-color: $checkbox-color;

          .c-icon {
            > svg {
              fill: $theme-base;
            }
          }
        }
      }

    }
  }
}

